#1 Two absolutely useless hibernate dependencies removed. #2 h:outputStyle shoudl be defined in h:head tag, instead of body ! #3 Removed library css defined in outputStyle. There is no such library defined.

--- a/src/main/webapp/WEB-INF/pattern.xhtml
+++ b/src/main/webapp/WEB-INF/pattern.xhtml
@@ -6,11 +6,9 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Heating</title>
-
+        <h:outputStylesheet name="css/style.css"></h:outputStylesheet>
     </h:head>
     <h:body>
-
-        <h:outputStylesheet library="css" name="css/style.css"></h:outputStylesheet>
         <div class="message">Hello World!</div>
 
         <p:growl id="growl" showSummary="true" showDetail="true" sticky="false" />
