--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,10 +9,11 @@
 
     <ui:composition template="/WEB-INF/template.xhtml">
         <p:messages autoUpdate="true" showSummary="true" />
-        <ui:define name="text">
-
-        </ui:define>
+        <ui:define name="header">Nadpis</ui:define>
+        <ui:define name="content">Lorem ipsum</ui:define>
     </ui:composition>
+    
+    
 
 </html>
 
