editRoom findRoomById not working

--- a/src/main/webapp/administration.xhtml
+++ b/src/main/webapp/administration.xhtml
@@ -48,7 +48,7 @@
                     </p:column>
 
                     <p:column id="edit" headerText="Upravit">
-                        <p:link outcome="administration" value="Upravit">
+                        <p:link outcome="roomDetail" value="Upravit">
                             <f:param name="roomId" value="#{room.id}" />
                         </p:link>
 
