--- a/src/main/webapp/roomDetail.xhtml
+++ b/src/main/webapp/roomDetail.xhtml
@@ -10,7 +10,9 @@
     <ui:composition template="/WEB-INF/template.xhtml">
         <p:messages autoUpdate="true" showSummary="true" />
 
-
+        <f:metadata>
+            <f:viewParam id="id" name="id" value="#{editRoomBean.id}"/>
+        </f:metadata>
 
         <ui:define name="header">Nová místnost</ui:define>
 
