#1A little help with room editor completion. Managed Property was used right. Maybe introducing a flash-scoped variables would offer new possibilities.#2 Room's JPA settings changes - orphan sensors are now removed. #3 InputText for building's name in roomDetail.xhtml is now disabled. Rooms should be picked from a list, therefore InputText makes no sense. #4 When the number of sensors is changed, method in EditRoomBean is called to remove old sensors and add new, blank ones. #4 When submitting the roomDetail.xhtml form, the commandButton called an actionListener, so no redirection to administration.xhtml happened. An action should be called -> corrected.

--- a/src/main/webapp/roomDetail.xhtml
+++ b/src/main/webapp/roomDetail.xhtml
@@ -27,9 +27,10 @@
                 <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
 
                     <p:outputLabel for="roomBuilding" value="Budova:" />
-                    <p:inputText id="roomBuilding" style="width:194px" value="#{editRoomBean.editRoom.building}">
+                    <p:inputText id="roomBuilding" style="width:194px" value="#{editRoomBean.editRoom.building.name}" disabled="true">
                         <p:ajax event="blur" delay="1000" update="@this, :growl"/>
                     </p:inputText>
+
 
                     <p:outputLabel for="roomName" value="Název místnosti: " />
                     <p:inputText id="roomName" style="width:194px" value="#{editRoomBean.editRoom.roomName}">
@@ -39,13 +40,11 @@
                     <p:outputLabel for="menuSensors" value="Počet senzorů:" />
 
                     <p:spinner id="menuSensors" min="1" max="5" value="#{editRoomBean.numOfSensors}">
-                        <p:ajax event="change" update="@this, :growl"/>
+                        <p:ajax event="change" update="@this, :growl" listener="#{editRoomBean.changeSensorCount()}"/>
                     </p:spinner>
-
-
                 </h:panelGrid>
 
-                <p:commandButton value="Save" id="submitButton" actionListener="#{editRoomBean.submitRoom()}"  ajax="false" />
+                <p:commandButton value="Save" id="submitButton" action="#{editRoomBean.submitRoom()}"  ajax="false" />
 
             </h:form>
 
